# Exchange-EWS-MCP-Server

./: .env  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-binaries.yml
deploy/: Dockerfile  k8s-deployment.yaml
docs/: Exchange_EWS_MCP接入方案与详细设计.md
src/ews_exchange_mcp/: client.py  config.py  idempotency.py  server.py  utils.py
