[project]
name = "email-exchange-mcp-server"
version = "0.1.0"
description = "Exchange EWS MCP Server implemented in Python using exchangelib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "exchangelib>=5.6.0",
    "markdown>=3.10.2",
    "mcp>=1.26.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.7.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
]
